--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pdf-to-printer",
+  "name": "@abpncio/pdf-to-printer",
   "version": "5.3.1",
   "description": "A utility to print PDF files from Node.js and Electron",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/artiebits/pdf-to-printer.git"
+    "url": "git+https://github.com/artiebits/pdf-to-printer.git"
   },
   "main": "dist/bundle.js",
   "types": "dist/index.d.ts",
@@ -60,5 +60,10 @@
     "windows",
     "macos",
     "linux"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/artiebits/pdf-to-printer/issues"
+  },
+  "homepage": "https://github.com/artiebits/pdf-to-printer#readme",
+  "author": "abponcio"
 }
